--- a/demo.yaml
+++ b/demo.yaml
@@ -1,3 +1,9 @@
 - hosts: all
   tasks:
     - ping:
+- name: Sample Playbook
+  hosts: all
+  tasks:
+    - name: Print hello world
+      ansible.builtin.debug:
+        msg: Hello World
